; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/hello_pi/hello_triangle2/extr_triangle2.c_draw_triangles.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/hello_pi/hello_triangle2/extr_triangle2.c_draw_triangles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@GL_FRAMEBUFFER = common dso_local global i32 0, align 4
@GL_COLOR_BUFFER_BIT = common dso_local global i32 0, align 4
@GL_DEPTH_BUFFER_BIT = common dso_local global i32 0, align 4
@GL_ARRAY_BUFFER = common dso_local global i32 0, align 4
@GL_TEXTURE_2D = common dso_local global i32 0, align 4
@GL_TRIANGLE_FAN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32, i32, i32, i32, i32)* @draw_triangles to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @draw_triangles(%struct.TYPE_3__* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %13 = load i32, i32* @GL_FRAMEBUFFER, align 4
  %14 = call i32 @glBindFramebuffer(i32 %13, i32 0)
  %15 = load i32, i32* @GL_COLOR_BUFFER_BIT, align 4
  %16 = load i32, i32* @GL_DEPTH_BUFFER_BIT, align 4
  %17 = or i32 %15, %16
  %18 = call i32 @glClear(i32 %17)
  %19 = call i32 (...) @check()
  %20 = load i32, i32* @GL_ARRAY_BUFFER, align 4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 9
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @glBindBuffer(i32 %20, i32 %23)
  %25 = call i32 (...) @check()
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 8
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @glUseProgram(i32 %28)
  %30 = call i32 (...) @check()
  %31 = load i32, i32* @GL_TEXTURE_2D, align 4
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 7
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @glBindTexture(i32 %31, i32 %34)
  %36 = call i32 (...) @check()
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 6
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @glUniform4f(i32 %39, double 5.000000e-01, double 5.000000e-01, double 8.000000e-01, double 1.000000e+00)
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 5
  %43 = load i32, i32* %42, align 4
  %44 = load i32, i32* %10, align 4
  %45 = load i32, i32* %10, align 4
  %46 = call i32 @glUniform2f(i32 %43, i32 %44, i32 %45)
  %47 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %47, i32 0, i32 4
  %49 = load i32, i32* %48, align 4
  %50 = load i32, i32* %11, align 4
  %51 = load i32, i32* %12, align 4
  %52 = call i32 @glUniform2f(i32 %49, i32 %50, i32 %51)
  %53 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 3
  %55 = load i32, i32* %54, align 4
  %56 = load i32, i32* %8, align 4
  %57 = load i32, i32* %9, align 4
  %58 = call i32 @glUniform2f(i32 %55, i32 %56, i32 %57)
  %59 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %60 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %59, i32 0, i32 2
  %61 = load i32, i32* %60, align 4
  %62 = call i32 @glUniform1i(i32 %61, i32 0)
  %63 = call i32 (...) @check()
  %64 = load i32, i32* @GL_TRIANGLE_FAN, align 4
  %65 = call i32 @glDrawArrays(i32 %64, i32 0, i32 4)
  %66 = call i32 (...) @check()
  %67 = load i32, i32* @GL_ARRAY_BUFFER, align 4
  %68 = call i32 @glBindBuffer(i32 %67, i32 0)
  %69 = call i32 (...) @glFlush()
  %70 = call i32 (...) @glFinish()
  %71 = call i32 (...) @check()
  %72 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %73 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %72, i32 0, i32 1
  %74 = load i32, i32* %73, align 4
  %75 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %76 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %75, i32 0, i32 0
  %77 = load i32, i32* %76, align 4
  %78 = call i32 @eglSwapBuffers(i32 %74, i32 %77)
  %79 = call i32 (...) @check()
  ret void
}

declare dso_local i32 @glBindFramebuffer(i32, i32) #1

declare dso_local i32 @glClear(i32) #1

declare dso_local i32 @check(...) #1

declare dso_local i32 @glBindBuffer(i32, i32) #1

declare dso_local i32 @glUseProgram(i32) #1

declare dso_local i32 @glBindTexture(i32, i32) #1

declare dso_local i32 @glUniform4f(i32, double, double, double, double) #1

declare dso_local i32 @glUniform2f(i32, i32, i32) #1

declare dso_local i32 @glUniform1i(i32, i32) #1

declare dso_local i32 @glDrawArrays(i32, i32, i32) #1

declare dso_local i32 @glFlush(...) #1

declare dso_local i32 @glFinish(...) #1

declare dso_local i32 @eglSwapBuffers(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
